@@ -11,18 +11,15 @@
  * by the Free Software Foundation. 
  * See the COPYING file for more information.
  *
- ***********************************************************************
- *
- * Last port: operation/overlay/FuzzyPointLocator.java rev. 0
- *
  **********************************************************************/
 
-#ifndef GEOS_OP_OVERLAY_FUZZYPOINTLOCATOR_H
-#define GEOS_OP_OVERLAY_FUZZYPOINTLOCATOR_H
+#ifndef GEOS_OP_OVERLAY_OFFSETPOINTGENERATOR_H
+#define GEOS_OP_OVERLAY_OFFSETPOINTGENERATOR_H
 
 #include <geos/algorithm/PointLocator.h> // for composition
 #include <geos/geom/Geometry.h> // for auto_ptr visibility of dtor
-#include <geos/geom/Location.h> // for Location::Value enum
+#include <geos/geom/MultiPoint.h> // for auto_ptr visibility of dtor
+#include <geos/geom/Coordinate.h> // for use in vector
 
 #include <vector>
 #include <memory> // for auto_ptr
@@ -30,8 +27,10 @@
 // Forward declarations
 namespace geos {
 	namespace geom {
-		class Geometry;
-		class Coordinate;
+		//class Geometry;
+		//class MultiPoint;
+		class LineString;
+		//class Coordinate;
 	}
 }
 
@@ -39,38 +38,36 @@ namespace geos {
 namespace operation { // geos::operation
 namespace overlay { // geos::operation::overlay
 
-/** \brief
- * Finds the location of a point relative to
- * a geometry using a tolerance value
- * to decide whether the point in on the boundary.
- */
-class FuzzyPointLocator {
+/// Generates points offset from both sides of all segments in a geometry
+//
+class OffsetPointGenerator {
 
 public:
 
-	FuzzyPointLocator(const geom::Geometry& geom, double nTolerance);
+	OffsetPointGenerator(const geom::Geometry& geom, double offset);
 
-	geom::Location::Value getLocation(const geom::Coordinate& pt);
+	/// Gets the computed offset points.
+	std::auto_ptr< std::vector<geom::Coordinate> > getPoints();
 
 private:
 
 	const geom::Geometry& g;
 
-	double tolerance;
+	double offsetDistance;
 
-	algorithm::PointLocator ptLocator;
+	std::auto_ptr< std::vector<geom::Coordinate> > offsetPts;
 
-	std::auto_ptr<geom::Geometry> linework;
+	void extractPoints(const geom::LineString* line);
 
-	std::auto_ptr<geom::Geometry> getLineWork(const geom::Geometry& geom);
-
+	void computeOffsets(const geom::Coordinate& p0,
+			const geom::Coordinate& p1);
 };
 
 } // namespace geos::operation::overlay
 } // namespace geos::operation
 } // namespace geos
 
-#endif // ndef GEOS_OP_OVERLAY_FUZZYPOINTLOCATOR_H
+#endif // ndef GEOS_OP_OVERLAY_OFFSETPOINTGENERATOR_H
 
 /**********************************************************************
  * $Log$
